mplot 0.4.9 [2014-12-05]
------------------------

Changed parallel backend for af() from doMC
to doParallel which should work for both
unix-like systems and windows.

Added redundant variable to vis().

Fixed issue with deparse(model.formula)
when the model.formula was too long for
deparse to cope with.


mplot 0.4.7 [2014-11-10]
------------------------

New data sets: diabetes and artificial example

mplot 0.4.6 [2014-10-15]
------------------------

First public version

