@@ -1,7 +1,7 @@
 Package: mplot
 Type: Package
 Title: Graphical model stability and model selection procedures
-Version: 0.4.9
+Version: 0.5.0
 Date: 2014-07-21
 Authors@R: c(person("Garth", "Tarr", role = c("aut", "cre"),
     email = "garth.tarr@gmail.com"),
